Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-11-23 (SVN):
    * utils/common/bspfile.c (SwapBSPFile): although the end result in
      memory needn't change, swap the texinfo in a way consistent with
      the layout of the vecs in the texinfo_t struct. found in a recent
      commit in quakeforge git repo.

2012-11-22 (SVN):
    * utils, qbsp: added command line option "-oldhullsize" to replicate
      the old h2utils/qbsp behavior of using the original hexen2 sizes
      for hulls #5 and #6, not H2MP ones, if so needed. also removed the
      unix fork() and windows CreateProcess() code for now.

2012-11-20 (SVN):
    * [gl_]model.h: synced h2 and hw versions and moved under h2shared.
      added info about the hw EF_BRIGHTFIELD and EF_ONFIRE brokenness.
    * server/model.h: synced h2 and hw versions, renamed to sv_model.h
      and moved under h2shared.
    * server/model.c: renamed to sv_model.c.
    * updated version date stamp to 2012-11-20.
    * gamecode/hc, constant.hc: added info about the EF_BRIGHTFIELD and
      EF_ONFIRE brokenness to hexenworld and siege versions.

2012-11-15 (SVN):
    * pr_edict.c: ED_PrintEdict_f, ED_PrintEdicts and ED_Count require
      an active server to print any infos. ED_PrintEdict_f can not work
      with a negative argument.
    * updated version date stamp to 2012-11-15.

2012-11-11 (SVN):
    * [gl_]model.c (Mod_LoadTexinfo): although the end result in memory
      doesn't change, load the texinfo in a way consistent with the
      layout of the vecs in the mtexinfo_t struct. from a recent commit
      in tyr-quake git repo.
    * updated version date stamp to 2012-11-11.

2012-11-10 (SVN):
    * engine/hexen2/sv_user.c: new quake2-style noclip movement. from
      fitzquake, configured by cvar sv_altnoclip, enabled by default.)
    * updated version date stamp to 2012-11-10.

2012-11-08 (SVN):
    * [gl_]screen.c (SCR_Init): initialize con_forcedup as true, because