@@ -76,7 +76,7 @@ extern vec3_t vec3_origin;
 		(v)[2] = -(v)[2];					\
 	} while (0)
 
-#define VectorClear(a)		((a)[2] = (a)[1] = (a)[0] = 0);
+#define VectorClear(a)		((a)[2] = (a)[1] = (a)[0] = 0)
 #if 0
 #define VectorCopy(a,b)		memcpy((b),(a),sizeof(vec3_t))
 #else
